=== master

* Add implicit_subquery extension, for implicitly using a subquery for datasets using raw SQL when calling dataset methods that modify SQL (jeremyevans)

* Make Dataset#from_self keep the columns from the current dataset if present (jeremyevans)

* Add implicit_subquery extension, implicitly using subqueries for dataset methods if the current dataset uses raw SQL (jeremyevans)

* Make SQL::ValueList#inspect show that it is a value list (jeremyevans)

* Make LiteralString#inspect show that it is a literal string (jeremyevans)

* Make Model::Associations::AssociationReflection#inspect show reflection class and guess at association definition line (jeremyevans)

* Make SQLTime#inspect show it is an SQLTime instance, and only the time component (jeremyevans)

* Make SQL::Blob#inspect show that it is a blob, the number of bytes, and some or all of the content (jeremyevans)

* Make plugins not modify the constant namespace for the model class that uses them (jeremyevans)

* Do not modify encoding of SQL::Blob instances in force_encoding plugin (jeremyevans)

* Add Model.freeze_descendents to subclasses plugin, for easier finalizing associations/freezing of descendent classes (jeremyevans)

* Add Model.finalize_associations method for finalizing associations, speeding up some association reflections methods almost 10x (jeremyevans)

* Implement Model.freeze such that it can be used in production (jeremyevans)

* Recognize another disconnect error in the jdbc/as400 adapter (perlun) (#1300)

* Correctly handle conversion of false values when typecasting PostgreSQL arrays (mistoo) (#1299)

* Raise error if the postgres adapter attempts to load an incompatible version of sequel_pg (mahlonsmith) (#1298)

* Fix jdbc adapter so basic_type_convertor_map is not shared between instances, work with Database#freeze (jeremyevans)

=== 4.43.0 (2017-02-01)

* Make jdbc/postgresql adapter work if pg_hstore extension is loaded first (jeremyevans) (#1296)
